Configure Gmail SMTP settings and add Railway setup documentation

--- a/env.example
+++ b/env.example
@@ -8,15 +8,24 @@ NODE_ENV=development
 GOOGLE_CLIENT_IDS=
 
 # Email verification (disabled by default)
+# Set to 'true' to enable email verification and notifications
 EMAIL_VERIFICATION_ENABLED=false
-EMAIL_VERIFICATION_FROM=
+
+# Email sender information
+# This email will appear as the sender of verification and notification emails
+EMAIL_VERIFICATION_FROM=hubiappinfo@gmail.com
+
+# Base URL for email links (frontend URL)
+# This is used in verification email links
+# Example: https://your-frontend-url.com or https://hubi.app
 EMAIL_VERIFICATION_BASE_URL=
 
-# SMTP credentials (only required if EMAIL_VERIFICATION_ENABLED=true)
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USER=
-SMTP_PASS=
+# SMTP credentials (required if EMAIL_VERIFICATION_ENABLED=true)
+# Gmail SMTP configuration:
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=hubiappinfo@gmail.com
+SMTP_PASS=your-app-password-here
 SMTP_SECURE=false
 
 # Sentry error tracking (optional)
