Add email verification page and auto-detect backend URL for mobile app

--- a/env.example
+++ b/env.example
@@ -15,9 +15,11 @@ EMAIL_VERIFICATION_ENABLED=false
 # This email will appear as the sender of verification and notification emails
 EMAIL_VERIFICATION_FROM=hubiappinfo@gmail.com
 
-# Base URL for email links (frontend URL)
-# This is used in verification email links
-# Example: https://your-frontend-url.com or https://hubi.app
+# Base URL for email links (optional)
+# If not set, backend URL will be used automatically
+# For mobile app: Leave empty or use backend URL
+# For web app: Use your frontend URL (e.g., https://hubi.app)
+# Example: https://backend-production-7063.up.railway.app
 EMAIL_VERIFICATION_BASE_URL=
 
 # SMTP credentials (required if EMAIL_VERIFICATION_ENABLED=true)
