--- a/env.example
+++ b/env.example
@@ -22,7 +22,15 @@ EMAIL_VERIFICATION_FROM=hubiappinfo@gmail.com
 # Example: https://backend-production-7063.up.railway.app
 EMAIL_VERIFICATION_BASE_URL=
 
-# SMTP credentials (required if EMAIL_VERIFICATION_ENABLED=true)
+# Email provider: 'smtp' or 'resend'
+# Use 'resend' for Resend API (recommended for Railway)
+# Use 'smtp' for SMTP servers (Gmail, SendGrid, etc.)
+EMAIL_PROVIDER=resend
+
+# Resend API (if EMAIL_PROVIDER=resend)
+RESEND_API_KEY=your-resend-api-key-here
+
+# SMTP credentials (required if EMAIL_PROVIDER=smtp)
 # Gmail SMTP configuration:
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
