Migrate file uploads from local storage to Firebase Storage

--- a/env.example
+++ b/env.example
@@ -46,3 +46,13 @@ SENTRY_TRACES_SAMPLE_RATE=0.1
 # Set to 'true' to enable Swagger UI in production
 ENABLE_SWAGGER=false
 
+# Firebase Storage Configuration
+# Firebase Service Account JSON (as a stringified JSON object)
+# Get this from Firebase Console > Project Settings > Service Accounts > Generate New Private Key
+# Example: FIREBASE_SERVICE_ACCOUNT={"type":"service_account","project_id":"your-project",...}
+FIREBASE_SERVICE_ACCOUNT=
+
+# Firebase Storage Bucket Name
+# Example: your-project.appspot.com
+FIREBASE_STORAGE_BUCKET=
+
