--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^12.0.0",
     "google-auth-library": "^9.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
