Fix Resend email configuration: enforce info@hubiiapp.com and validate API keys

--- a/env.example
+++ b/env.example
@@ -13,7 +13,7 @@ EMAIL_VERIFICATION_ENABLED=false
 
 # Email sender information
 # This email will appear as the sender of verification and notification emails
-EMAIL_VERIFICATION_FROM=hubiappinfo@gmail.com
+EMAIL_VERIFICATION_FROM=info@hubiiapp.com
 
 # Base URL for email links (optional)
 # If not set, backend URL will be used automatically
