--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "install:dev": "npm install"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.3.4",
     "@sentry/node": "^7.119.0",
     "@sentry/tracing": "^7.119.0",
     "axios": "^1.7.7",
